# media_player

./: .gitignore  Makefile  MediaController.cpp  MediaController.h  MediaModel.cpp  MediaModel.h  MediaView.cpp  MediaView.h  README.md  main.cpp  med
PlayerMediaApp/: CMakeLists.txt  Makefile  PlayerMediaApp  coverage_filtered.info  main.cpp  tests
PlayerMediaApp/PlayerMediaApp/: main.cpp
PlayerMediaApp/PlayerMediaApp/include/Controller/: ControllerManager.h  DeviceController.h  MediaFileController.h
PlayerMediaApp/PlayerMediaApp/include/Model/: AudioFile.h  MediaFile.h  PlaylistManager.h
PlayerMediaApp/PlayerMediaApp/include/View/: BoardManager.h  CLIManager.h  MediaFileHandlerView.h  PlaylistHandlerView.h  PlaylistView.h  ScanView.h
PlayerMediaApp/PlayerMediaApp/src/Controller/: DeviceController.cpp  MediaFileController.cpp  MediaPlaylistController.cpp  PlayerController.cpp
PlayerMediaApp/PlayerMediaApp/src/Model/: AudioFile.cpp  CurrentPlay.cpp  MediaFile.cpp  VideoFile.cpp
PlayerMediaApp/PlayerMediaApp/src/View/: BaseCurrentPlayView.cpp  BoardManager.cpp  MainMenuView.cpp  MenuControlPlayView.cpp  MetadataView.cpp  S32K144InterfaceLCD.cpp  VolumeView.cpp
PlayerMediaApp/PlayerMediaApp/src/utils/: ConfigLoader.cpp
PlayerMediaApp/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
PlayerMediaApp/coverage_report/src/Controller/: ControllerManager.cpp.func-sort-c.html  ControllerManager.cpp.func.html  ControllerManager.cpp.gcov.html  MediaFileController.cpp.func-sort-c.html  MediaFileController.cpp.func.html  MediaFileController.cpp.gcov.html  MediaFileManagerController.cpp.func-sort-c.html  MediaFileManagerController.cpp.func.html  MediaFileManagerController.cpp.gcov.html  MediaPlaylistController.cpp.func-sort-c.html  MediaPlaylistController.cpp.func.html  MediaPlaylistController.cpp.gcov.html  MediaPlaylistManagerController.cpp.func-sort-c.html  MediaPlaylistManagerController.cpp.func.html  MediaPlaylistManagerController.cpp.gcov.html  MediaScannerController.cpp.func-sort-c.html  MediaScannerController.cpp.func.html  MediaScannerController.cpp.gcov.html  PlayerController.cpp.func-sort-c.html  PlayerController.cpp.func.html  PlayerController.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
PlayerMediaApp/coverage_report/src/Model/: AudioFile.cpp.func-sort-c.html  AudioFile.cpp.func.html  AudioFile.cpp.gcov.html  FolderManager.cpp.func-sort-c.html  FolderManager.cpp.func.html  FolderManager.cpp.gcov.html  MediaFile.cpp.func-sort-c.html  MediaFile.cpp.func.html  MediaFile.cpp.gcov.html  MediaFileManager.cpp.func-sort-c.html  MediaFileManager.cpp.func.html  MediaFileManager.cpp.gcov.html  ModelManager.cpp.func-sort-c.html  ModelManager.cpp.func.html  ModelManager.cpp.gcov.html  Playlist.cpp.func-sort-c.html  Playlist.cpp.func.html  index-sort-f.html  (+9 more)
PlayerMediaApp/coverage_report/test/: index-sort-f.html  index-sort-l.html  index.html  mainTest.cpp.func-sort-c.html  mainTest.cpp.func.html  mainTest.cpp.gcov.html
PlayerMediaApp/database/: listFolderDirectory.data  listFolderUSB.data
PlayerMediaApp/database/audio/: audio.data
PlayerMediaApp/database/playlist/: asd.playlist  play1.playlist  playlist1.playlist  test 1000.playlist  test.playlist  video ne.playlist
PlayerMediaApp/database/video/: video.data
PlayerMediaApp/include/Controller/: ControllerManager.h  MediaFileController.h  MediaFileManagerController.h  MediaPlaylistController.h  MediaPlaylistManagerController.h  MediaScannerController.h  PlayerController.h
PlayerMediaApp/include/Model/: AudioFile.h  CurrentPlay.h  FolderManager.h  FolerManager.h  MediaFile.h  MediaFileManager.h  MetadataManager.h  ModelManager.h  Playlist.h  PlaylistManager.h  VideoFile.h
PlayerMediaApp/include/View/: BaseCurrentPlayView.h  BaseView.h  CLIManager.h  MainMenuView.h  MediaFileHandlerView.h  MediaFileManagerView.h  MediaFileView.h  MenuControlPlayView.h  MetadataView.h  PlaylistHandlerView.h  PlaylistManagerView.h  PlaylistView.h  S32K144InterfaceLCD.h  ScanView.h  UartView.h  ViewBase.h  ViewManager.h  VolumeView.h
PlayerMediaApp/include/utils/: ConfigLoader.h  MainMenuException.h  MediaFileManagerException.h  MetadataEditException.h  PlayListManagerException.h  PlaylistHandlerException.h  PlaylistManagerException.h  ScanException.h  UARTSetup.h
PlayerMediaApp/src/Controller/: ControllerManager.cpp  MediaFileController.cpp  MediaFileManagerController.cpp  MediaPlaylistController.cpp  MediaPlaylistManagerController.cpp  MediaScannerController.cpp  PlayerController.cpp
PlayerMediaApp/src/Model/: AudioFile.cpp  FolderManager.cpp  MediaFile.cpp  MediaFileManager.cpp  MetadataManager.cpp  ModelManager.cpp  Playlist.cpp  PlaylistManager.cpp  VideoFile.cpp
PlayerMediaApp/src/View/: BaseCurrentPlayView.cpp  BaseView.cpp  CLIManager.cpp  MainMenuView.cpp  MediaFileHandlerView.cpp  MediaFileManagerView.cpp  MediaFileView.cpp  MetadataView.cpp  PlaylistHandlerView.cpp  PlaylistManagerView.cpp  PlaylistView.cpp  ScanView.cpp  UartView.cpp  ViewBase.cpp  ViewManager.cpp
PlayerMediaApp/src/utils/: UARTSetup.cpp
PlayerMediaApp/test/: mainTest.cpp
PlayerMediaApp/test/Controller/: ControllerManagerTest.cpp  MediaFileControllerTest.cpp  MediaFileManagerControllerTest.cpp  MediaPlaylistControllerTest.cpp  MediaPlaylistManagerControllerTest.cpp  MediaScannerControllerTest.cpp  PlayerControllerTest.cpp
PlayerMediaApp/test/Model/: AudioFileTest.cpp  FolderManagerTest.cpp  MediaFileManagerTest.cpp  MediaFileTest.cpp  ModelManagerTest.cpp  PlaylistManagerTest.cpp  PlaylistTest.cpp  VideoFileTest.cpp
PlayerMediaApp/test/View/: BaseViewTest.cpp  MainMenuViewTest.cpp  MediaFileHandlerViewTest.cpp  MediaFileManagerViewTest.cpp  PlaylistHandlerViewTest.cpp  PlaylistManagerViewTest.cpp  ScanViewTest.cpp  UartViewTest.cpp  ViewManagerTest.cpp
PlayerMediaApp/test/utils/: ConfigLoaderTest.cpp  MainMenuExceptionTest.cpp  MediaFileManagerExceptionTest.cpp  MetadataEditExceptionTest.cpp  PlaylistHandlerExceptionTest.cpp  PlaylistManagerExceptionTest.cpp  ScanExceptionTest.cpp  UARTSetupTest.cpp
(+231 files in other folders)
